--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "pulsej-backend",
+  "name": "extractorw",
   "version": "1.0.0",
+  "description": "Backend API for ExtractorW",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node start-dev.js",
+    "process-historical": "node process_historical.js",
+    "create-env": "node create-env.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.20.0",
     "cors": "^2.8.5",
-    "node-fetch": "^3.3.2",
-    "@supabase/supabase-js": "^2.49.4"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 } 
