--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "node start-dev.js",
     "process-historical": "node process_historical.js",
-    "create-env": "node create-env.js"
+    "create-env": "node create-env.js",
+    "debug": "node debug-data.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.20.0",
