--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:original": "node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.49.7",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
