--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - .env
     volumes:
       - logs:/app/logs
+      - transcriptions:/tmp
     networks:
       - extractorw-network
     healthcheck:
@@ -30,6 +31,8 @@ services:
 
 volumes:
   logs:
+    driver: local
+  transcriptions:
     driver: local
 
 networks:
