--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.1",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "axios": "^1.6.0"
   }
 }
