--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "process-historical": "node process_historical.js",
     "create-env": "node create-env.js",
     "debug": "node debug-data.js",
-    "start:original": "node server.js"
+    "start:original": "node server.js",
+    "install-vizta": "npm install openai@^4.67.3 uuid@^9.0.1"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -26,8 +27,10 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.1",
+    "openai": "^4.67.3",
     "pdf-parse": "^1.1.1",
     "recharts": "^2.15.3",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "uuid": "^9.0.1"
   }
 }
