--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=8080
+      - DOCKER_ENV=true
     env_file:
       - .env
     volumes:
