--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
+    "form-data": "^4.0.0",
     "framer-motion": "^12.19.2",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
